--- a/lib/package.json
+++ b/lib/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@iyio/react-localization",
-  "version": "0.0.5",
+  "name": "react-localization-advanced",
+  "version": "0.0.1",
   "description": "Tools for localizing React apps",
   "main": "dist/localization.js",
   "types": "dist/localization.d.ts",
