- Added lots of stuff

--- a/lib/tsconfig.json
+++ b/lib/tsconfig.json
@@ -98,6 +98,6 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "exclude": [
-    "node_modules", "babel.config.js", "metro.config.js", "jest.config.js"
+    "node_modules", "dist", "babel.config.js", "metro.config.js", "jest.config.js"
   ]
 }
