--- a/lib/package.json
+++ b/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-localization-advanced",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Tools for localizing React apps",
   "main": "dist/localization.js",
   "types": "dist/localization.d.ts",
@@ -8,12 +8,19 @@
     "dist"
   ],
   "scripts": {
-    "build": "rm -rf dist && tsc"
+    "watch": "tsc --watch",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/react": "^17.0.0",
+    "@types/react-native": "^0.66.1",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "react": "^17.0.0",
+    "react-native": "^0.60.0"
   }
 }
