--- a/cli/package.json
+++ b/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-localization-advanced-cli",
-  "version": "0.5.0",
+  "version": "0.7.1",
   "description": "Tools for localizing React apps",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,7 +10,7 @@
   "scripts": {
     "cli": "ts-node index.ts",
     "build": "tsc",
-    "publish": "npm run build && npm publish"
+    "build-publish": "npm run build && npm publish"
   },
   "bin": {
     "build-string-map": "dist/index.js"
