--- a/lib/package.json
+++ b/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-localization-advanced",
-  "version": "0.5.0",
+  "version": "0.7.0",
   "description": "Tools for localizing React apps",
   "main": "dist/localization.js",
   "types": "dist/localization.d.ts",
@@ -10,7 +10,7 @@
   "scripts": {
     "watch": "tsc --watch",
     "build": "tsc",
-    "publish": "npm run build && npm publish"
+    "build-publish": "npm run build && npm publish"
   },
   "keywords": [],
   "author": "",
